--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cron": "^3.5.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "prisma": "^6.2.1",
     "ts-node": "^10.9.2",
