--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.9",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9"
   },
